--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,3 +10,11 @@ services:
       - "8080:8080"
   mongo:
     image: "mongo"
+
+  nginx:
+    image: "nginx"
+    volumes: 
+      - ./nginx.conf:/etc/nginx/nginx.conf
+    ports: 
+     - 80:80
+     - 443:443
