use nginx as reverse proxy

--- a/nginx.conf
+++ b/nginx.conf
@@ -75,7 +75,9 @@ http {
     # single worker for timing out).
 
     # for UNIX domain socket setups:
-    server unix:/path/to/.unicorn.sock fail_timeout=0;
+    # server unix:/path/to/.unicorn.sock fail_timeout=0;
+    # links to the app defined by "app" in docker-compose
+    server app:8080;
 
     # for TCP setups, point these to your backend servers
     # server 192.168.0.7:8080 fail_timeout=0;
@@ -85,7 +87,7 @@ http {
 
   server {
     # enable one of the following if you're on Linux or FreeBSD
-    # listen 80 default deferred; # for Linux
+     listen 80 default; # for Linux
     # listen 80 default accept_filter=httpready; # for FreeBSD
 
     # If you have IPv6, you'll likely want to have two separate listeners.
@@ -97,7 +99,7 @@ http {
     # listen [::]:80 ipv6only=on; # deferred or accept_filter recommended
 
     client_max_body_size 4G;
-    server_name _;
+    server_name localhost;
 
     # ~2 seconds is often enough for most folks to parse HTML/CSS and
     # retrieve needed images/icons/frames, connections are cheap in
@@ -105,15 +107,11 @@ http {
     keepalive_timeout 5;
 
     # path for static files
-    root /path/to/app/current/public;
+    root /var/www;
 
     # Prefer to serve static files directly from nginx to avoid unnecessary
     # data copies from the application server.
-    #
-    # try_files directive appeared in in nginx 0.7.27 and has stabilized
-    # over time.  Older versions of nginx (e.g. 0.6.x) requires
-    # "if (!-f $request_filename)" which was less efficient:
-    # https://bogomips.org/unicorn.git/tree/examples/nginx.conf?id=v3.3.1#n127
+
     try_files $uri/index.html $uri.html $uri @app;
 
     location @app {
@@ -147,10 +145,10 @@ http {
       proxy_pass http://app_server;
     }
 
-    # Rails error pages
+    # Error pages
     error_page 500 502 503 504 /500.html;
     location = /500.html {
-      root /path/to/app/current/public;
+      root /var/www;
     }
   }
 }
