--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,9 @@ services:
 
     ports:
       - "8080:8080"
+    depends_on:
+      - mongo
+
   mongo:
     image: "mongo"
 
@@ -15,6 +18,9 @@ services:
     image: "nginx"
     volumes: 
       - ./nginx.conf:/etc/nginx/nginx.conf
+      - ./static_files:/var/www
     ports: 
      - 80:80
      - 443:443
+    depends_on:
+      - app
